--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,14 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorLight</item>
+        <item name="colorPrimaryDark">@color/colorWhite</item>
+        <item name="menuBackground">@drawable/menu_background_dark</item>
+    </style>
+
+    <style name="DarkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorDark</item>
         <item name="colorPrimaryDark">@color/colorDark</item>
+        <item name="menuBackground">@drawable/menu_background_dark</item>
     </style>
 
     <style name="MenuButton">
