--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorDark">#1D1D24</color>
     <color name="colorLight">#E0E5E9</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="primaryLight">#FF5722</color>
+    <color name="primaryLightD">#A74A30</color>
+    <color name="primaryDark">#223D53</color>
+    <color name="primaryDarkD">#142430</color>
+    <color name="backgroundLight">#E4E4E4</color>
+    <color name="backgroundDark">#202F3F</color>
+    <color name="fieldLight">#E0E5E9</color>
+    <color name="fieldDark">#333338</color>
 </resources>
