--- a/app/src/main/res/layout/main_menu_layout.xml
+++ b/app/src/main/res/layout/main_menu_layout.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_background_light">
+    android:background="?menuBackground">
 
     <Button
-        style="@style/LightMenuButton"
+        style="@style/MenuButton"
         android:id="@+id/new_game_button"
         android:layout_width="match_parent"
         android:layout_marginTop="120dp"
@@ -20,7 +20,7 @@
 
     <Button
         android:id="@+id/settings_button"
-        style="@style/LightMenuButton"
+        style="@style/MenuButton"
         android:layout_width="match_parent"
         android:layout_marginBottom="120dp"
         android:text="STATISTIC"
@@ -29,7 +29,7 @@
         tools:layout_editor_absoluteX="30dp" />
 
     <Button
-        style="@style/DarkMenuButton"
+        style="@style/MenuButton"
         android:id="@+id/continue_button"
         android:layout_width="match_parent"
         android:text="Continue"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/new_game_button" />
 
     <Button
-        style="@style/DarkMenuButton"
+        style="@style/MenuButton"
         android:id="@+id/multiplayer_button"
         android:layout_width="match_parent"
         android:text="Multiplayer"
@@ -49,5 +49,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/settings_button"
         app:layout_constraintTop_toBottomOf="@+id/continue_button" />
+
+    <Switch
+        android:id="@+id/switch_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
