--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,5 +8,6 @@
         <attr name="textColor" format="color"/>
         <attr name="buttonColor" format="color"/>
         <attr name="fieldCellColor" format="color"/>
+        <attr name="cellBackground" format="reference"/>
     </declare-styleable>
 </resources>
